--- a/package.json
+++ b/package.json
@@ -1,9 +1,5 @@
 {
-<<<<<<< HEAD
   "name": "myfirstapp",
-=======
-  "name": "my-app",
->>>>>>> d60460f9942d4ad7893be6b74ac79e9c14fef31a
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,6 +8,7 @@
     "@testing-library/user-event": "^12.6.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
